--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Prerequisites
 *.d
+.DS_Store
 
 # Compiled Object files
 *.slo
@@ -7,6 +8,7 @@
 *.o
 *.obj
 cmake-build-debug/
+build/
 
 # Precompiled Headers
 *.gch
