--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,14 @@ add_library(ds_template
 
 # as you can see, i have many directories and i want to add them all, and build this project
 # how to configure this CMakeLists.txt file?
+add_subdirectory(common_algo/)
 add_subdirectory(backtracking/)
 add_subdirectory(array_string/)
 #add_subdirectory(binary_tree/)
 #add_subdirectory(dp/)
 add_subdirectory(sort_greedy/)
 add_subdirectory(stack_related)
+add_subdirectory(test/)
 #add_subdirectory(graph/)
 # as we have had these subdirectories, then how to configure cmake file in each of them?
 # i want to add all the cpp files in each directory, and build them all
