--- a/graph/CMakeLists.txt
+++ b/graph/CMakeLists.txt
@@ -9,10 +9,10 @@ message(STATUS ${CMAKE_CURRENT_BINARY_DIR})
 list(APPEND GRAPH_SOURCES
         ${CURRENT_SRC_DIR}/shortest_path.cpp
         ${CURRENT_SRC_DIR}/traffic_route.cpp
-        ${CURRENT_SRC_DIR}/wordLadder.cpp
-        ${CURRENT_SRC_DIR}/Tarjan.cpp
-        ${CURRENT_SRC_DIR}/Topology.cpp
-        ${CURRENT_SRC_DIR}/RedundantConnection.cpp
+        ${CURRENT_SRC_DIR}/word_ladder.cpp
+        ${CURRENT_SRC_DIR}/tarjan.cpp
+        ${CURRENT_SRC_DIR}/topology.cpp
+        ${CURRENT_SRC_DIR}/redundant_connection.cpp
 )
 foreach (GRAPH_SOURCE ${GRAPH_SOURCES})
     get_filename_component(GRAPH_SOURCE_NAME ${GRAPH_SOURCE} NAME_WE)
