refactor: external sort large data file without mmap/unmap chunks repeatedly, using globally-mmaped value instead to improve efficiency

--- a/sort_greedy/CMakeLists.txt
+++ b/sort_greedy/CMakeLists.txt
@@ -1,11 +1,12 @@
-#in this subdirectory, i want to add these executables corresponding to the source files
-# what does these executables do?
-
 file(GLOB_RECURSE SORT_GREEDY_SERIES_QA
         "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
 )
 
+set(SAN_FLAGS "-fsanitize=address")
+
 foreach (source_file ${SORT_GREEDY_SERIES_QA})
     get_filename_component(executable_name ${source_file} NAME_WE)
     add_executable(${executable_name} ${source_file})
-endforeach ()
+    #target_compile_options(${executable_name} PRIVATE ${SAN_FLAGS})
+    #target_link_options(${executable_name} PRIVATE ${SAN_FLAGS})
+endforeach()
